{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "1238731d-4526-4212-baf1-6dac43983c4f",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Value",
                    "id": "559d93eb-351f-402a-9634-6230a0b08327",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Backward",
                    "type": "Value",
                    "id": "e76a3022-a223-46a7-81c1-76bc6e5248ec",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Value",
                    "id": "04e68b57-4e92-49db-8183-68e67727a1cf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Value",
                    "id": "33c70393-38e5-444e-bcc6-1db3f7c8f301",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookX",
                    "type": "PassThrough",
                    "id": "62bcd866-69ab-4e43-bd74-252b5c6fbf9a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookY",
                    "type": "PassThrough",
                    "id": "bd4b6e9d-df4f-40ba-a837-fb61929a1fdd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "ad957f62-9aa7-47a2-9542-1a07c4c0ebfd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Value",
                    "id": "5f335c1d-b213-4d89-a685-64d37c3c0b0c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Value",
                    "id": "8957eb4a-bc01-4d1f-b83b-df69278043a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Value",
                    "id": "841d7511-1786-48f7-ac48-010acc453eb7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreviousWeapon",
                    "type": "Value",
                    "id": "1f078b0f-1ed6-47fd-b799-efcb24628f92",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextWeapon",
                    "type": "Value",
                    "id": "76c56bac-fc4b-490f-b988-8a9a2ba0888b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Value",
                    "id": "d8bde754-83ec-48c2-a8d7-570fec135d5f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20467436-6bc3-4dc0-92d9-ac7494057899",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "552a34f6-c4c4-40d7-8584-a5614ef6d36a",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fef83c0-00ca-4093-b646-c436bef481ee",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd7d1e28-62ca-4069-aff7-c542759e746a",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "798e26fe-545e-4c22-9a13-ff6bba649199",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c08a8021-8c08-46e1-bdc5-56821613a85c",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0432442a-0430-406c-a9dc-cbf6debedb9e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "064349e1-931d-400a-827c-4aab63344f86",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0abb19f5-a1f0-4a9b-89a4-717d70a75e88",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "LookX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f20561f-7fdf-49f2-98f3-a1655523f045",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "Scale(factor=100),StickDeadzone",
                    "groups": "Gamepad",
                    "action": "LookX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db2e52a9-5335-473e-966d-48d2a7431352",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "LookY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6332090a-4e0d-4ace-adfa-76cea2908ab8",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "Scale(factor=100),StickDeadzone",
                    "groups": "Gamepad",
                    "action": "LookY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5d3775c-2cd8-488a-b990-0b6562b3a3b7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be8c2f2d-038b-402a-8bd8-2214ad627d0e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11b00ae3-872b-4628-9b62-2ad3ded0bcef",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b64448dc-86f2-4586-bfa7-1a4c22db7dc9",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d19b40f-f6c5-4ae4-89be-d375166c0957",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83a44b70-3e29-4886-98e7-2f53b00a2331",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce092ea1-6dd9-485d-991c-d0488a3a68e3",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85b15c14-d701-44f8-8215-f5cf7167a95b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a983f862-a2ec-437e-ad26-b431fa6094f3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59ec0456-2ace-44f8-b23f-4bc4f2fd6b46",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "PreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09255027-62da-4ddc-8812-282c7cf1a1b8",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd3a28d5-d7ce-48f8-9d94-f2d58bbca605",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse_Keyboard",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68c0016e-bba2-4d91-96ff-5aa58588e0cc",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26436ab7-7136-4358-94fb-af58edb169ca",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4f67dfa-416e-4930-ba59-7b26d4da014d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "476ac324-dc0c-4714-9569-f6cdf26b3cb5",
            "actions": [
                {
                    "name": "UnPause",
                    "type": "Button",
                    "id": "7a3b391e-d56f-4377-aaf1-8a17c9d36d2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "82f0de7d-359a-48f3-ac79-9e41f51bb9cd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84f0c083-18d4-40ca-9abf-f3dc35a4c4d0",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse_Keyboard",
            "bindingGroup": "Mouse_Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}